<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ Copyright (C) 2014 wak
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~ You may obtain a copy of the License at
 ~
 ~    http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
 -->
<resources>
    <string name="app_name">5x1 date and clock</string>

    <string name="background_color_default" translatable="false">#99ffffff</string>
    <string name="text_color_default" translatable="false">#000000</string>
    <string name="message_confirm">Are you sure?</string>
    <string name="message_success_reset_style">Style has been updated by default style</string>
    <string name="message_invalid_color">Invalid color (%s)</string>

    <string name="date_text_format_12h" translatable="false">MMM dd E</string>
    <string name="date_text_format_24h" translatable="false">dd. MMM yyy</string>
    <string name="day_text_format" translatable="false">EEEE</string>
    <string name="time_text_format_12h" translatable="false">hh:mm a</string>
    <string name="time_text_format_24h" translatable="false">kk:mm</string>
</resources>
